# codex-control

./: .gitattributes  .gitignore  CODEX_CONTROL_REWRITE_REPORT.md  Cargo.toml  LICENSE  README.md  biome.json  package-lock.json  package.json
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  git_inspector.rs  hook_server.rs  main.rs  process_watcher.rs  redaction.rs  session_store.rs  transcript_parser.rs
apps/desktop/src/app/: App.tsx  styles.css
apps/desktop/src/components/: EmptyState.tsx  SessionCard.tsx  StatusBadge.tsx
apps/desktop/src/features/approvals/: ApprovalPill.tsx
apps/desktop/src/features/git/: GitSummary.tsx
apps/desktop/src/features/sessions/: types.ts
apps/desktop/src/features/settings/: SettingsPanel.tsx
apps/desktop/src/features/timeline/: TimelinePanel.tsx
apps/desktop/src/lib/: fallbackData.ts  grouping.test.ts  grouping.ts  mockData.ts  tauri.ts  time.ts
docs/: architecture.md  hooks.md  install.md  security.md  troubleshooting.md
examples/hooks/: hooks.json
scripts/: check_git_line_counts.sh  format_existing_source.sh  normalize_text_files.py  rebuild_public_files.py  rewrite_public_surface.py  verify_normalization.py
