[package]
name = "codex-control-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Codex Control desktop application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
codex-core = { path = "../../../packages/codex-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
which = "6"
